--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -17,3 +17,24 @@ jobs:
         uses: actions/checkout@v2
       - name: step2
         run: " Get-ChildItem Env: | Sort-Object Name "
+  job3:
+    name: third job
+    runs-on: macos-latest
+    steps:
+      - name: step1
+        uses: actions/checkout@v2
+      - name: step2
+        run: env | sort
+  job4:
+    name: Fourth job 
+    runs-on: ubuntu-latest
+    needs: [job1,job2,job3]
+    steps:
+      - name: step1
+        uses: actions/checkout@v2
+      - name: step2
+        run: |
+          ls -a 
+          echo "hello"
+
+
