--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -1,5 +1,7 @@
 name: Worflow test
 on: push 
+env:
+  ARTIFACT: myArtifact
 jobs:
   job1:
     name: first job 
@@ -8,33 +10,9 @@ jobs:
       - name: step1
         uses: actions/checkout@v2
       - name: step2
-        run: env | sort
-  job2:
-    name: second job 
-    runs-on: windows-latest
-    steps:
-      - name: step1
-        uses: actions/checkout@v2
-      - name: step2
-        run: " Get-ChildItem Env: | Sort-Object Name "
-  job3:
-    name: third job
-    runs-on: macos-latest
-    steps:
-      - name: step1
-        uses: actions/checkout@v2
-      - name: step2
-        run: env | sort
-  job4:
-    name: Fourth job 
-    runs-on: ubuntu-latest
-    needs: [job1,job2,job3]
-    steps:
-      - name: step1
-        uses: actions/checkout@v2
-      - name: step2
-        run: |
-          ls -a 
-          echo "hello"
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ env.ARTIFACT }}
+          path: .
 
 
